tests/Core/positive/test037.jvc
-- global variables

inductive Unit {
  unit : Unit;
};

def x := 3 + 4;

def f := \y x;

def g := \y \z x;

write (f unit) >>
write (g unit unit) >>
write "\n"
