tests/Core/negative/parsing/test008.jvc
def f : Int -> Int := \x \y x + y;
